5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4067/executions/1601_2043.log
== SUBMITION (2019-03-25 19:12:09) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
nota = a*1+b*2+c*3+d*4/1+2+3+4
print(round("a nota final e {}".formta(nota), 2))
-- EXECUTION TIME:
0.209092
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 6, in <module>
    print(round("a nota final e {}".formta(nota), 2))
AttributeError: 'str' object has no attribute 'formta'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:12:10) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
nota = a*1+b*2+c*3+d*4/1+2+3+4
print(round("a nota final e {}".formta(nota), 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("a nota final e {}".formta(nota), 2))
AttributeError: 'str' object has no attribute 'formta'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:53) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
nota = a*1+b*2+c*3+d*4/1+2+3+4
print(round("a nota final e " nota, 2))
-- EXECUTION TIME:
0.150753
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 6
    print(round("a nota final e " nota, 2))
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:13:01) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
nota = a*1+b*2+c*3+d*4/1+2+3+4
print(round(nota, 2))
-- EXECUTION TIME:
0.184323
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:13:01) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
nota = a*1+b*2+c*3+d*4/1+2+3+4
print(round(nota, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:13:15) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
nota = a*1+b*2+c*3+d*4/1+2+3+4
print(round(nota, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:14:00) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
nota = (a*1+b*2+c*3+d*4)/(1+2+3+4)
print(round(nota, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:14:11) 
-- CODE:
a = float(input("primeira nota: "))
b = float(input("segunda nota: "))
c = float(input("terceira nota: "))
d = float(input("quarta nota: "))
nota = (a*1+b*2+c*3+d*4)/(1+2+3+4)
print(round(nota, 2))
-- EXECUTION TIME:
0.174534
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
